<resources>
    <string name="app_name">android app</string>
    <string name="hello_title">Hello!</string>
    <string name="hello_choose">Choose</string>
    <string name="hello_reg">Register</string>
    <string name="hello_login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login_title">Login</string>
    <string name="login_email">Email</string>
    <string name="login_pass">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_redirect">Don\'t have an account? "\n" Register here.</string>
    <string name="reg_title">Registration</string>
    <string name="reg_name">Full Name</string>
    <string name="reg_btn">Register</string>
    <string name="reg_redirect">Already have an account? "\n" Log in here</string>
</resources>